plugin/sdkv2: Fix sdkv2-intro page to be index page
Removing some unnecessary custom handling for this section.

--- a/content/docs/terraform-tools.mdx
+++ b/content/docs/terraform-tools.mdx
@@ -48,8 +48,8 @@ Terraform is part of a rich infrastructure and DevOps ecosystem. The tools below
 
 |Name | Maintainer |Description| Tutorial |
 |-----|------------|-----------|----------|
-| [Plugin SDK](/docs/extend/sdkv2-intro.html) | HashiCorp | Develop your own Terraform providers. | [Setup and Implement Read](https://learn.hashicorp.com/tutorials/terraform/provider-setup?in=terraform/providers) |
-|[Plugin Framework](/docs/plugin/framework/index.html) | HashiCorp | A new SDK to develop your own Terraform providers. The framework provides improvements and additional features beyond what is available in the Plugin SDK. | [Implement Create and Read with the Terraform Plugin Framework](https://learn.hashicorp.com/tutorials/terraform/plugin-framework-create?in=terraform/providers) |
+| [Plugin SDK](/plugin/sdkv2) | HashiCorp | Develop your own Terraform providers. | [Setup and Implement Read](https://learn.hashicorp.com/tutorials/terraform/provider-setup?in=terraform/providers) |
+|[Plugin Framework](/plugin/framework) | HashiCorp | A new SDK to develop your own Terraform providers. The framework provides improvements and additional features beyond what is available in the Plugin SDK. | [Implement Create and Read with the Terraform Plugin Framework](https://learn.hashicorp.com/tutorials/terraform/plugin-framework-create?in=terraform/providers) |
 |[`terraform-plugin-mux`](https://github.com/hashicorp/terraform-plugin-mux)| HashiCorp | Combine providers built using different SDKs and frameworks. This lets you upgrade between SDKs or frameworks on a resource-by-resource basis instead of all at once. | |
 | [`terraform-plugin-go`](https://github.com/hashicorp/terraform-plugin-go) | HashiCorp |  Use low-level Go bindings for the Terraform plugin protocol as a foundation for integrations. | |
 | [`terraform-plugin-go-contrib`](https://github.com/hashicorp/terraform-plugin-go-contrib) | HashiCorp |  Use this set of common code packages with `terraform-plugin-go`. |  |
