--- a/content/plugin/mux/combining-protocol-version-6-providers.mdx
+++ b/content/plugin/mux/combining-protocol-version-6-providers.mdx
@@ -11,7 +11,7 @@ The [`tf6muxserver`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mu
 Use this package to:
 
 * Support multiple development teams across separate codebases.
-* Support multiple provider SDK implementations. For example, you could upgrade an existing [terraform-plugin-sdk/v2](/plugin/sdkv2/sdkv2-intro) provider to protocol version 6 and then combine it with one or more providers built with [terraform-plugin-framework](/plugin/framework).
+* Support multiple provider SDK implementations. For example, you could upgrade an existing [terraform-plugin-sdk/v2](/plugin/sdkv2) provider to protocol version 6 and then combine it with one or more providers built with [terraform-plugin-framework](/plugin/framework).
 
 ## Compatibility
 
