--- a/content/plugin/mux/index.mdx
+++ b/content/plugin/mux/index.mdx
@@ -13,8 +13,8 @@ The [terraform-plugin-mux](https://pkg.go.dev/github.com/hashicorp/terraform-plu
 The `terraform-plugin-mux` Go module enables flexibility when you develop and maintain Terraform providers. It is especially useful when you need to upgrade an existing provider to use the plugin framework SDK or the latest version of the plugin protocol. We recommend using `terraform-plugin-mux` for the following use cases:
 
 * Combine providers to reduce maintenance burden while still supporting varying Terraform requirements or multiple provider SDK implementations. 
-* Migrate resources and data sources from [terraform-plugin-sdk/v2](/plugin/sdkv2/sdkv2-intro) to [terraform-plugin-framework](/plugin/framework) over time.
-* Develop with [terraform-plugin-sdk/v2](/plugin/sdkv2/sdkv2-intro), but require Terraform CLI 1.0 or later.
+* Migrate resources and data sources from [terraform-plugin-sdk/v2](/plugin/sdkv2) to [terraform-plugin-framework](/plugin/framework) over time.
+* Develop with [terraform-plugin-sdk/v2](/plugin/sdkv2), but require Terraform CLI 1.0 or later.
 * Develop with [terraform-plugin-framework](/plugin/framework), but support Terraform CLI 0.12 or later.
 
 ## Combine Protocol 6 Providers
