--- a/content/plugin/mux/translating-protocol-version-6-to-5.mdx
+++ b/content/plugin/mux/translating-protocol-version-6-to-5.mdx
@@ -10,7 +10,7 @@ The [`tf6to5server`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mu
 
 Use this package to:
 
-* Migrate individual resources and data sources from [terraform-plugin-sdk/v2](/plugin/sdkv2/sdkv2-intro) to [terraform-plugin-framework](/plugin/framework) over time, while maintaining Terraform CLI 0.12 and later compatibility.
+* Migrate individual resources and data sources from [terraform-plugin-sdk/v2](/plugin/sdkv2) to [terraform-plugin-framework](/plugin/framework) over time, while maintaining Terraform CLI 0.12 and later compatibility.
 * Develop with [terraform-plugin-framework](/plugin/framework), but support Terraform CLI 0.12 and later.
 
 ## Compatibility
