--- a/content/registry/providers/publishing.mdx
+++ b/content/registry/providers/publishing.mdx
@@ -54,7 +54,7 @@ It supports the following fields:
 | Field                        | Purpose                                                                                                                                                                                                                                                                                                                        |
 | ---------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | `metadata`                   | Object containing additional data to be associated with a release.                                                                                                                                                                                                                                                             |
-| `metadata.protocol_versions` | List of strings with supported Terraform protocol versions of the provider. Providers developed using [Terraform Plugin SDK version 2](/plugin/sdkv2/sdkv2-intro) should set this to `["5.0"]`. Providers developed using [Terraform Plugin Framework](/plugin/framework) should set this to `["6.0"]`. Defaults to `["5.0"]`. |
+| `metadata.protocol_versions` | List of strings with supported Terraform protocol versions of the provider. Providers developed using [Terraform Plugin SDK version 2](/plugin/sdkv2) should set this to `["5.0"]`. Providers developed using [Terraform Plugin Framework](/plugin/framework) should set this to `["6.0"]`. Defaults to `["5.0"]`. |
 | `version`                    | Numeric version of the manifest format, not the version of your provider. Set this to `1`.                                                                                                                                                                                                                                     |
 
 ~> **Important:** If developing a provider using [Terraform Plugin Framework](/plugin/framework), ensure the protocol versions are set to `["6.0"]` or practitioners will receive errors when attempting to use the provider.
