--- a/content/cloud-docs/api-docs/index.mdx
+++ b/content/cloud-docs/api-docs/index.mdx
@@ -322,7 +322,7 @@ $ curl \
 ## Rate Limiting
 
 You can make up to 30 requests per second to the API as an authenticated or unauthenticated request. If you reach the rate limit then your access will be throttled and an error response will be returned. A few endpoints
-have lower limits to prevent email spam attack vectors. If you receive a rate limited response, the limit will be reflected in the `x-ratelimit-limit` header once triggered.
+have lower limits to prevent certain spam and abuse scenarios. If you receive a rate limited response, the limit will be reflected in the `x-ratelimit-limit` header once triggered.
 
 Authenticated requests are allocated to the user associated with the authentication token. This means that a user with multiple tokens will still be limited to 30 requests per second, additional tokens will not allow you to increase the requests per second permitted.
 
