--- a/content/cloud-docs/agents/changelog.mdx
+++ b/content/cloud-docs/agents/changelog.mdx
@@ -16,6 +16,19 @@ within each release are categorized into one or more of the following labels:
 Each version below corresponds to a release artifact available for download on
 the official [releases website](https://releases.hashicorp.com/tfc-agent/).
 
+## 1.2.0 (05/02/2022)
+
+IMPROVEMENTS:
+
+* Added better error handling for non-existent working directories (#148)
+* Added jq, python, and pip to the Docker image (#149)
+
+## 1.1.7 (04/25/2022)
+
+BUG FIXES:
+
+* Fixed response handling for retryable downloads (#146)
+
 ## 1.1.6 (04/20/2022)
 
 BUG FIXES:
