start updating for undefined variables

--- a/content/cloud-docs/workspaces/creating.mdx
+++ b/content/cloud-docs/workspaces/creating.mdx
@@ -56,7 +56,7 @@ For CLI and API-driven workspaces, the workspace overview page appears. For vers
 
 ### Configure Terraform Variables (Version Control Only)
 
-After you create a new workspace from a version control respository, Terraform Cloud scans its configuration files for [Terraform variables](/cloud-docs/workspaces/variables#terraform-variables) and automatically creates those variables within the workspace. Terraform cannot perform successful runs until you set values for all undefined variables.
+After you create a new workspace from a version control respository, Terraform Cloud scans its configuration files for undefined [Terraform variables](/cloud-docs/workspaces/variables#terraform-variables) and automatically creates those variables within the workspace. Terraform cannot perform successful runs until you set values for all undefined variables.
 
 Choose one of the following actions:
 
