--- a/content/cloud-docs/integrations/run-tasks/index.mdx
+++ b/content/cloud-docs/integrations/run-tasks/index.mdx
@@ -104,7 +104,7 @@ To get started, sign up for an eligible [pricing](https://bridgecrew.io/pricing/
 
 ### Firefly
 
-Firefly integrates with Terraform Cloud to help you move faster without breaking your cloud. The run tasks integration helps teams cast a cloud safety net and understand how changing untargeted assets with affect your cloud before you deploy it.
+Firefly integrates with Terraform Cloud to help you move faster without breaking your cloud. The run tasks integration helps teams cast a cloud safety net and understand how changing untargeted assets will affect your cloud before you deploy it.
 
 To get started, create a [Firefly account](https://app.gofirefly.io/) and follow the [Terraform Cloud Run Tasks guide](https://firefly-5.gitbook.io/firefly-product-docs123/appendix/terraform-cloud-run-tasks) in the Firefly documentation.
 
