--- a/content/cloud-docs/integrations/run-tasks/index.mdx
+++ b/content/cloud-docs/integrations/run-tasks/index.mdx
@@ -150,7 +150,7 @@ Sophos Factory works with Terraform Cloud run tasks to enable IaC security tools
 
 ### Tenable
 
-Tenable.cs and Hashicorp Terraform Cloud enables teams to codify cloud security policies for infrastructure as code with automated enforcement and remediation recommendations as part of their development workflow. For Terraform Cloud users, it has never been easier to establish compliance and security guardrails in the development process that ensures infrastructure is secure before it is provisioned.To get started, follow the [Configure Terraform Cloud Integration guide](https://docs.tenable.com/tenablecs/Content/Quickstart/CI-CD/Terraform.htm) in the Tenable documentation.
+Tenable.cs and Hashicorp Terraform Cloud enables teams to codify cloud security policies for infrastructure as code with automated enforcement and remediation recommendations as part of their development workflow. This lets you establish compliance and security guardrails in the development process that ensure infrastructure is secure before it is provisioned. To get started, follow the [Configure Terraform Cloud Integration guide](https://docs.tenable.com/tenablecs/Content/Quickstart/CI-CD/Terraform.htm) in the Tenable documentation.
 
 ### Vantage
 
