--- a/content/cloud-docs/workspaces/settings/run-tasks.mdx
+++ b/content/cloud-docs/workspaces/settings/run-tasks.mdx
@@ -8,7 +8,7 @@ Run Tasks allow you to directly integrate third-party tools and services at cert
 
 You can manage run tasks through the UI as detailed below or through the [Run Tasks APIs](/cloud-docs/api-docs/run-tasks).
 
-> **Hands-on:** Try the [Configure Snyk Run Task in Terraform Cloud tutorial](https://learn.hashicorp.com/tutorials/terraform/cloud-run-tasks-snyk&utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) on HashiCorp Learn.
+> **Hands-on:** Try the [Configure Snyk Run Task in Terraform Cloud tutorial](https://learn.hashicorp.com/tutorials/terraform/cloud-run-tasks-snyk?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) on HashiCorp Learn.
 
 ## Requirements
 
