Remove the word `undefined`

--- a/content/cloud-docs/workspaces/creating.mdx
+++ b/content/cloud-docs/workspaces/creating.mdx
@@ -60,7 +60,7 @@ After you create a new workspace from a version control repository, Terraform Cl
 
 Choose one of the following actions:
 
-- To skip this step, click **Go to workspace overview**. Terraform Cloud still adds any undefined Terraform variables without default values to the workspace. You can set values for these variables later from within the workspace.
+- To skip this step, click **Go to workspace overview**. Terraform Cloud still adds any Terraform variables without default values to the workspace. You can set values for these variables later from within the workspace.
 - To configure variables, enter a value for each variable and click **Save variables**.
 
 ## After Creating a Workspace
