--- a/content/cloud-docs/workspaces/settings/run-tasks.mdx
+++ b/content/cloud-docs/workspaces/settings/run-tasks.mdx
@@ -20,35 +20,31 @@ You can manage run tasks through the UI as detailed below or through the [Run Ta
 
 To create a new run task:
 
-1. Navigate to the desired workspace, open the **Settings** menu and select **Run Tasks**.
+1. Navigate to the desired workspace, open the **Settings** menu, and select **Run Tasks**.
 
    ![Screenshot: a workspace's settings drop-down menu](/img/docs/run-tasks-workspace-settings.png)
 
 1. Click **Create a new run task**. The **Run Tasks** page appears.
 
-1. Click **Create run task**.
-
 1. Enter the information about the run task to be configured:
 
-- **Enabled** (optional): Whether the run task will run across all associated workspaces. New tasks are enabled by default.
-- **Name** (required): A human-readable name for the run task. This will be displayed in workspace configuration pages and can contain letters, numbers, dashes and underscores.
-- **Endpoint URL** (required): The URL for the external service. Run tasks will POST the [run tasks payload](/cloud-docs/integrations/run-tasks/#integration-details) to this URL.
-- **HMAC key** (optional): A secret key that may be required by the external service to verify request authenticity.
+   - **Enabled** (optional): Whether the run task will run across all associated workspaces. New tasks are enabled by default.
+   - **Name** (required): A human-readable name for the run task. This will be displayed in workspace configuration pages and can contain letters, numbers, dashes and underscores.
+   - **Endpoint URL** (required): The URL for the external service. Run tasks will POST the [run tasks payload](/cloud-docs/integrations/run-tasks/#integration-details) to this URL.
+   - **HMAC key** (optional): A secret key that may be required by the external service to verify request authenticity.
 
-5. Click **Create run task**.
-
-   ![Screenshot: an organization's populated run tasks state](/img/docs/run-tasks-run-tasks-populated.png)
+5. Click **Create run task**. The run task is now available within the organization. You can now associate it with one or more workspaces.
 
 ## Associating Run Tasks with a Workspace
 
 1. Click **Workspaces** in the top navigation bar, click your workspace in the grid, open the **Settings** menu and select **Run Tasks**.
 
-1. Click the **+** next to the task(s) you want to add to the workspace.
+1. Click the **+** next to the task you want to add to the workspace.
 
 1. Choose an enforcement level:
 
-- **Advisory**  - Run tasks can not block a run from completing. If the task fails, the run will proceed with a warning in the UI.
-- **Mandatory** - Run tasks can block a run from completing. If the task fails (including a timeout or unexpected remote error condition), the run will transition to an Errored state with a warning in the UI.
+   - **Advisory**  - Run tasks can not block a run from completing. If the task fails, the run will proceed with a warning in the UI.
+   - **Mandatory** - Run tasks can block a run from completing. If the task fails (including a timeout or unexpected remote error condition), the run will transition to an Errored state with a warning in the UI.
 
 4. Click **Create**. Your run task is now configured.
 
@@ -58,11 +54,11 @@ Run tasks perform actions between the [plan](/cloud-docs/run/states#2-the-plan-s
 
 For example, if a mandatory task fails and an advisory task succeeds, the run will fail. If an advisory task fails, but a mandatory task succeeds, the run will succeed and proceed to the apply stage. Regardless of the exit status of a task, Terraform Cloud displays the status and any related message data in the UI.
 
-Here is an example of a run that failed due to a mandatory run task.
+The following example shows a run that failed due to a mandatory run task.
 
 ![Screenshot: a run with failed tasks](/img/docs/run-tasks-run-failed.png)
 
-And here is an example of a run that succeeded.
+The following example shows a run that succeeded.
 
 ![Screenshot: a run with passed tasks](/img/docs/run-tasks-run-success.png)
 
@@ -86,5 +82,3 @@ You must remove a run task from all associated workspaces before you can delete 
 1. Click **Delete run task**.
 
 You cannot delete run tasks that are still associated with a workspace. If you attempt this, you will see a warning in the UI containing a list of all workspaces that are associated with the run task.
-
-![Screenshot: a warning when attempting to delete an in-use run task](/img/docs/run-tasks-delete-run-task-warning.png)
